k3s/prefect/prefect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prefect-datascie-nz
  namespace: scienz
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # Enable auth for dashboard: just in case...
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-realm: 'Hello'
    nginx.ingress.kubernetes.io/auth-secret: accounts-service-ingress
spec:
  tls:
  - hosts:
    - prefect.datascie.nz
    secretName: prefect-datascie-nz-tls
  rules:
  - host: prefect.datascie.nz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prefect
            port:
              name: http
      - path: /graphql
        pathType: Prefix
        backend:
          service:
            name: prefect
            port:
              name: graphql
---
apiVersion: v1
kind: Service
metadata:
  name: prefect
  namespace: scienz
spec:
  ports:
  - name: http
    port: 80
    targetPort: ui
  - name: graphql
    port: 4200
    targetPort: apollo
  selector:
    app: prefect

---

# see also https://github.com/PrefectHQ/prefect/blob/master/src/prefect/cli/docker-compose.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prefect
  namespace: scienz
  labels:
    app: prefect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prefect
  template:
    metadata:
      labels:
        app: prefect
    spec:
      # The official image is amd64-only at the moment, so just use that.
      # Also, ensure we don't have RAM issues with all the sidecars.
      nodeSelector:
        kubernetes.io/arch: amd64

      containers:

      # Hasura: the GraphQL API that layers on top of Postgres for querying metadata
      - name: hasura
        image: hasura/graphql-engine:v1.3.0
        command:
        - graphql-engine
        - serve
        startupProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - wget -O - http://127.0.0.1:$(HASURA_GRAPHQL_SERVER_PORT)/healthz
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 10
          failureThreshold: 60
        ports:
        - name: hasura
          containerPort: 3000
          protocol: TCP


      # GraphQL: the server's business logic that exposes GraphQL mutations
      - name: graphql
        image: prefecthq/server:core-0.14.6
        command:
        - /bin/bash
        - -c
        - prefect-server database upgrade -y && python src/prefect_server/services/graphql/server.py
        ports:
        - name: graphql
          containerPort: 4201
          protocol: TCP


      # Towel: runs utilities that are responsible for server maintenance
      - name: towel
        image: prefecthq/server:core-0.14.6
        command:
        - python
        - src/prefect_server/services/towel/__main__.py
      - name: apollo
        image: prefecthq/apollo:core-0.14.6
        command:
        - /bin/bash
        - -c
        - ./post-start.sh && npm run serve
        startupProbe:
          exec:
            command:
            - /bin/bash
            - -c
            - curl --fail --silent http://127.0.0.1:4200/.well-known/apollo/server-health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 10
          failureThreshold: 60
        ports:
        - name: apollo
          containerPort: 4200
          protocol: TCP


      # UI: the user interface that provides a visual dashboard for mutating and querying metadata
      # The UI is a standalone web interface and only communicates with the Apollo GraphQL API via
      #  the host from which it is accessed.
      - name: ui
        image: prefecthq/ui:core-0.14.6
        command:
        - /intercept.sh
        startupProbe:
          exec:
            command:
            - /bin/bash
            - -c
            - curl --fail --silent --head http://127.0.0.1:8080/
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 10
          failureThreshold: 60
        ports:
        - name: ui
          containerPort: 8080
          protocol: TCP
